# 2ndscreen

./: .gitignore  Cargo.toml  README.md
src/: gui.rs  logging.rs  main.rs  protocol.rs
src/client/: input.rs  mod.rs
src/host/: capture.rs  config.rs  ffmpeg.rs  mod.rs  mod.rs.rej  ui.rs  virtual_display.rs
