[package]
name = "second_screen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "2ndscreen"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
mdns-sd = "0.11"
hostname = "0.4"    
xcap = "0.3"        
image = "0.25"
local-ip-address = "0.5"
eframe = "0.29"
chrono = { version = "0.4", features = ["serde"] }
scrap = "0.5"